--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "langchain (>=0.3.18,<0.4.0)",
     "langchain-community (>=0.3.17,<0.4.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "langchain-openai (>=0.3.6,<0.4.0)"
 ]
 
 
