--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "langchain (>=0.3.18,<0.4.0)",
     "langchain-community (>=0.3.17,<0.4.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "langchain-openai (>=0.3.6,<0.4.0)"
+    "langchain-openai (>=0.3.6,<0.4.0)",
+    "langgraph (>=0.2.73,<0.3.0)"
 ]
 
 
@@ -34,7 +35,6 @@ select = [
     "B",  # flake8-bugbear
     "C4",  # flake8-comprehensions
     "N",  # PEP8 naming convetions
-    "D"  # pydocstyle
 ]
 
 [tool.ruff.lint.pydocstyle]
